--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,4 +31,4 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Validate
-      run: terraform validate
+      run: terraform init
