Added region input validation

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,5 +30,8 @@ jobs:
       uses: hashicorp/setup-terraform@v1
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Validate
+    - name: Terraform Init
       run: terraform init
+
+    - name: Terraform Validate
+      run: terraform validate
